--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.0",
+    "eslint": "^4.3.0",
+    "eslint-config-airbnb": "^15.1.0",
     "ignore-styles": "^5.0.1",
     "mocha": "^3.4.2",
     "nyc": "^11.1.0"
