--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "postinstall": "./node_modules/.bin/babel src/ -d lib/",
+    "preinstall": "echo test",
     "test": "NODE_ENV=test BABEL_ENV=test node ./node_modules/.bin/mocha --compilers js:babel-core/register --require ignore-styles --ui bdd \"./test/**/*.{js,jsx}\""
   },
   "author": "Signal Zero",
