--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "postinstall": "asdfasdfasdf/.bin/babel src/ -d lib/",
+    "build": "./node_modules/.bin/babel src/ -d lib/",
     "preinstall": "echo test",
     "test": "NODE_ENV=test BABEL_ENV=test node ./node_modules/.bin/mocha --compilers js:babel-core/register --require ignore-styles --ui bdd \"./test/**/*.{js,jsx}\""
   },
